static/css/base.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");


.staff{
    color:goldenrod;
    font-weight:bold;
}

/* --Style bag icon--------------------------------------- */
.bi-bag{
    font-size: 1.5em;
}

.bi-person{
    font-size: 1.7em;
}

.white-text{
    color: rgba(255,255,255,1);
}

.dropdown-menu[data-bs-popper].left-auto{
    left:auto;
    right:0;
}


#mc_embed_signup {
    background: #fff;
    clear: left;
    width: 600px;
  }

.visually_hidden { 
    border: 0; 
    clip: rect(0 0 0 0); 
    height: 1px; 
    margin: -1px; 
    overflow: hidden; 
    padding: 0; 
    position: absolute; 
    width: 1px; 
}

#mce-responses{
    width:0;
    margin:0;
}

/* ---Hide spinners in number fields (W3Schools)-----------*/

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* -----------Toasts---------------------------------------*/
.message-container{
    position: fixed;
    top:72px;
    right:72px;
    z-index: 1000;
}

/*------------Profile Pages--------------------------------*/
.vh-90{
    height:80vh;
}

/*------------Styling home page ---------------------------*/

.navbar{
    z-index: 100000;
}

.z-index-9999{
    z-index:9999;
}

.font-size-3em{
    font-size:3em;
}

.height-85{
    height:85vh;
}

.carousel-item img{
    object-fit: cover;
    object-position: center center;
    height: 100%;
}

#carouselExampleIndicators{ 
    width:100%;
}

.cover-center-h100{
    object-fit: cover;
    object-position: center center;
    height: 100%;
}

.bg-img-holder-home {
    align-items: center;
    display: flex;
    text-decoration: none;
    justify-content: flex-start;
    text-align: center;
    position: relative;
    padding: 21px 21px 42px 21px;
    min-height: 300px;
  }

.bg-img-holder-home::after{
    content: '';
    background-image: url(../img/scuba-equipment-shop.jpg);
    background-size: cover;
    background-position-x: center;
    background-position-y: center;
    background-repeat: no-repeat;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: calc(100 / 100);
}

.holder-home-inner{
    display: flex;
    text-align: left;
    justify-content: center;
    flex-direction: column;
    align-items: flex-start;
    width: 50%;
}

.home-inner-headline {
    display: flex;
    align-items: center;
    font-family: inherit;
    font-size: 55px;
    font-weight: 400;
    min-height: 48px;
    color: rgba(255,255,255,1);
}

.home-inner-body {
    font-size: 18px;
    margin-top: 8px;
    min-height: 27px;
    color: rgba(255,255,255,1);
}

.home-inner-button-container {
  background: rgba(36,47,109,1);
  border: none;
  color: rgba(255,255,255,1);
  cursor: pointer;
  font-size: 18px;
  margin-top: 24px;
  outline: none;
  padding: 8px 24px;
  pointer-events: auto;
  text-decoration: none;
  border-radius: 4px;
  font-family: inherit;
}

.home-inner-button-text {
    color: rgba(255,255,255,1);
    cursor: pointer;
    font-size: 18px;
    pointer-events: auto;
    font-family: inherit;
  }

#shop-now{
    text-decoration: none;
    color: rgba(255,255,255,1);
}

.card.no-border{
    border:none;
}

@media screen and (min-width: 801px) {
    .bg-img-holder-home {
        max-height: none;
        min-height: 500px;
        padding: 32px 42px;
    }

    .home-inner-headline {
        min-height: 50px;
        color: rgba(255, 255, 255, 1);
    }

    .home-inner-body {
        color: rgba(255, 255, 255, 1);
        min-height: 31px;
        margin-top: 8px;
    }

    .home-inner-button-container {
        background: rgba(36, 47, 109, 1);
        color: rgba(255, 255, 255, 1);
        font-size: 21px;
    }
}


/* -----------------Products List Pages---------------------- */

.col-sm.product-list{
    width:320px;
}

.height-160px{
    height: 160px;
}

.product-list-image{
    width:198px; 
    height:198px; 
    object-fit:contain;
}

.border-none{
    border:none;
}


@media screen and (min-width: 801px) {
    .card.product-list {
        max-width: 200px;
    }
}


/* -------------------Create / Edit Product ----------------- */

.font-size-96{
    font-size:96px;
}

.white-text{
    color: white;
}

.create-edit{
    text-justify: center;
}

